# 3D-Sound-OpenAL

./: .gitignore  CMakeLists.txt  README.md  Sound.pro
Assets/: README.txt
include/: soundmanager.h  soundsource.h  vector3.h  wavfilehandler.h  wavfilereader.h
src/: main.cpp  soundmanager.cpp  soundsource.cpp  vector3.cpp  wavfilehandler.cpp  wavfilereader.cpp
